Thu 06 Jul 2004 10:12:44 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o bug fixed: calling @dcop with parameterless functions
	o bug fixed: ListBox.setCurrentItem didn't work
	o added setCurrentItem for ComboBox
	o added setCurrentItem/currentItem for TabWidget, remove obsolete
	  text and setText
	o bug fixed: itemDepth and itemPath
	o bug fixed: adding items to TreeWidget failed sometimes
	o added @String.section(string, substring, index) function, returning
	  section of a string
	o added third (optional) index parameter to @String.find 

Fri 02 Jul 2004 23:33:46 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o more TreeView methods: itemDepth(index) and itemPath(index)
	o setText, text and populate work for TreeView
	o parser cleanup and fixes
	o setPixmap(iconName, index) method for ListBoxes and TreeViews;
	  use index = -1 to set pixmaps for all items
	o Kommander 1.0alpha6 released

Thu 01 Jul 2004 16:03:20 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o add children(QString widget) DCOP call, returning list of
	  widgets that are direct children of the widget (or all widgets
	  if widget is null)
	o added type(QString widget) DCOP call returning class of widget
	o bug fixed: main dialog wasn't supported in @Widget.method syntax
	o QStringList is now supported as DCOP return value

Wed 30 Jun 2004 15:01:23 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o TreeView DCOP methods: insertItem(), insertItems(), clear(),
	  item(), setCurrentItem(), selection(), setSelection(),
	  removeItem()
	o TreeView tree support: use / to separate nodes (f. e.
	  insertItem("Root/Node/Subnode")
	o TreeView multiple column support: use \t to separate columns
	  (f. e. insertItem("document.txt\t45kb\t2004-06-30")

Tue 29 Jun 2004 00:44:39 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o all DCOP functions are handled in appropriate widgets
	o DCOP and specials are now registered together in single class
	o it is now possible to create new methods for new (plugin) widgets